dataset1235/2025-2/805158916/users/1354266131/executions/3435325918_4142573950.log
== RUN (2025-09-03 14:52:21)
-- CODE: 
morangosdoamor = int(input())
if  morangosdoamor >= 12:
  valor = 1.35 * morangosdoamor
else:
  valor = 1.50 * morangosdoamor
print(valor)
  
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
10.5
---- user output:
10.5
-- TEST CASE 2:
---- input:
12
---- correct output:
16.2
---- user output:
16.200000000000003
-- TEST CASE 3:
---- input:
25
---- correct output:
33.75
---- user output:
33.75
-- TEST CASE 4:
---- input:
3
---- correct output:
4.5
---- user output:
4.5
-- TEST CASE 5:
---- input:
13
---- correct output:
17.55
---- user output:
17.55
-- TEST CASE 6:
---- input:
21
---- correct output:
28.35
---- user output:
28.35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 14:51:09)
-- CODE: 
morangosdoamor = int(input())
if  morangosdoamor >= 12:
  valor = 1.30 * morangosdoamor
else:
  valor = 1.50 * morangosdoamor
prit(valor)
  
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
10.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(valor)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
12
---- correct output:
16.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(valor)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
25
---- correct output:
33.75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(valor)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
3
---- correct output:
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(valor)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
13
---- correct output:
17.55
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(valor)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 6:
---- input:
21
---- correct output:
28.35
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(valor)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 14:53:11)
-- CODE: 
morangosdoamor = int(input())
if  morangosdoamor >= 12:
  valor = 1.35 * morangosdoamor
else:
  valor = 1.50 * morangosdoamor
print(round(valor,2))
  
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
10.5
---- user output:
10.5
-- TEST CASE 2:
---- input:
12
---- correct output:
16.2
---- user output:
16.2
-- TEST CASE 3:
---- input:
25
---- correct output:
33.75
---- user output:
33.75
-- TEST CASE 4:
---- input:
3
---- correct output:
4.5
---- user output:
4.5
-- TEST CASE 5:
---- input:
13
---- correct output:
17.55
---- user output:
17.55
-- TEST CASE 6:
---- input:
21
---- correct output:
28.35
---- user output:
28.35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 14:52:51)
-- CODE: 
morangosdoamor = int(input())
if  morangosdoamor >= 12:
  valor = 1.35 * morangosdoamor
else:
  valor = 1.50 * morangosdoamor
print(valor)
  
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
10.5
---- user output:
10.5
-- TEST CASE 2:
---- input:
12
---- correct output:
16.2
---- user output:
16.200000000000003
-- TEST CASE 3:
---- input:
25
---- correct output:
33.75
---- user output:
33.75
-- TEST CASE 4:
---- input:
3
---- correct output:
4.5
---- user output:
4.5
-- TEST CASE 5:
---- input:
13
---- correct output:
17.55
---- user output:
17.55
-- TEST CASE 6:
---- input:
21
---- correct output:
28.35
---- user output:
28.35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 14:52:27)
-- CODE: 
morangosdoamor = int(input())
if  morangosdoamor >= 12:
  valor = 1.35 * morangosdoamor
else:
  valor = 1.50 * morangosdoamor
print(valor)
  
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
10.5
---- user output:
10.5
-- TEST CASE 2:
---- input:
12
---- correct output:
16.2
---- user output:
16.200000000000003
-- TEST CASE 3:
---- input:
25
---- correct output:
33.75
---- user output:
33.75
-- TEST CASE 4:
---- input:
3
---- correct output:
4.5
---- user output:
4.5
-- TEST CASE 5:
---- input:
13
---- correct output:
17.55
---- user output:
17.55
-- TEST CASE 6:
---- input:
21
---- correct output:
28.35
---- user output:
28.35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 14:53:16)
-- CODE: 
morangosdoamor = int(input())
if  morangosdoamor >= 12:
  valor = 1.35 * morangosdoamor
else:
  valor = 1.50 * morangosdoamor
print(round(valor,2))
  
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
10.5
---- user output:
10.5
-- TEST CASE 2:
---- input:
12
---- correct output:
16.2
---- user output:
16.2
-- TEST CASE 3:
---- input:
25
---- correct output:
33.75
---- user output:
33.75
-- TEST CASE 4:
---- input:
3
---- correct output:
4.5
---- user output:
4.5
-- TEST CASE 5:
---- input:
13
---- correct output:
17.55
---- user output:
17.55
-- TEST CASE 6:
---- input:
21
---- correct output:
28.35
---- user output:
28.35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 14:51:25)
-- CODE: 
morangosdoamor = int(input())
if  morangosdoamor >= 12:
  valor = 1.30 * morangosdoamor
else:
  valor = 1.50 * morangosdoamor
print(valor)
  
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
10.5
---- user output:
10.5
-- TEST CASE 2:
---- input:
12
---- correct output:
16.2
---- user output:
15.600000000000001
-- TEST CASE 3:
---- input:
25
---- correct output:
33.75
---- user output:
32.5
-- TEST CASE 4:
---- input:
3
---- correct output:
4.5
---- user output:
4.5
-- TEST CASE 5:
---- input:
13
---- correct output:
17.55
---- user output:
16.900000000000002
-- TEST CASE 6:
---- input:
21
---- correct output:
28.35
---- user output:
27.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 14:53:20)
-- CODE: 
morangosdoamor = int(input())
if  morangosdoamor >= 12:
  valor = 1.35 * morangosdoamor
else:
  valor = 1.50 * morangosdoamor
print(round(valor,2))
  
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
10.5
---- user output:
10.5
-- TEST CASE 2:
---- input:
12
---- correct output:
16.2
---- user output:
16.2
-- TEST CASE 3:
---- input:
25
---- correct output:
33.75
---- user output:
33.75
-- TEST CASE 4:
---- input:
3
---- correct output:
4.5
---- user output:
4.5
-- TEST CASE 5:
---- input:
13
---- correct output:
17.55
---- user output:
17.55
-- TEST CASE 6:
---- input:
21
---- correct output:
28.35
---- user output:
28.35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 14:52:47)
-- CODE: 
morangosdoamor = int(input())
if  morangosdoamor >= 12:
  valor = 1.35 * morangosdoamor
else:
  valor = 1.50 * morangosdoamor
print(valor)
  
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
10.5
---- user output:
10.5
-- TEST CASE 2:
---- input:
12
---- correct output:
16.2
---- user output:
16.200000000000003
-- TEST CASE 3:
---- input:
25
---- correct output:
33.75
---- user output:
33.75
-- TEST CASE 4:
---- input:
3
---- correct output:
4.5
---- user output:
4.5
-- TEST CASE 5:
---- input:
13
---- correct output:
17.55
---- user output:
17.55
-- TEST CASE 6:
---- input:
21
---- correct output:
28.35
---- user output:
28.35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 14:53:26)
-- CODE: 
morangosdoamor = int(input())
if  morangosdoamor >= 12:
  valor = 1.35 * morangosdoamor
else:
  valor = 1.50 * morangosdoamor
print(round(valor,2))
  
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
7
---- correct output:
10.5
---- user output:
10.5
-- TEST CASE 2:
---- input:
12
---- correct output:
16.2
---- user output:
16.2
-- TEST CASE 3:
---- input:
25
---- correct output:
33.75
---- user output:
33.75
-- TEST CASE 4:
---- input:
3
---- correct output:
4.5
---- user output:
4.5
-- TEST CASE 5:
---- input:
13
---- correct output:
17.55
---- user output:
17.55
-- TEST CASE 6:
---- input:
21
---- correct output:
28.35
---- user output:
28.35
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 14:51:45)
-- CODE: 
morangosdoamor = int(input())
if  morangosdoamor >= 12:
  valor = 1.30 * morangosdoamor
else:
  valor = 1.50 * morangosdoamor
print(valor)
  
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
10.5
---- user output:
10.5
-- TEST CASE 2:
---- input:
12
---- correct output:
16.2
---- user output:
15.600000000000001
-- TEST CASE 3:
---- input:
25
---- correct output:
33.75
---- user output:
32.5
-- TEST CASE 4:
---- input:
3
---- correct output:
4.5
---- user output:
4.5
-- TEST CASE 5:
---- input:
13
---- correct output:
17.55
---- user output:
16.900000000000002
-- TEST CASE 6:
---- input:
21
---- correct output:
28.35
---- user output:
27.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
